# universal-math-wars

./: .coveragerc  .gitignore  bad_words.txt  docker-compose.yml  notes.md  pyproject.toml  registration.py  roadmap.md  start.sh  test_registration.py
backend/: Dockerfile  database.py  main.py  pyproject.toml  registration.py
backend/tests/: conftest.py  test_database.py  test_main.py  test_registration.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
tests/: test_registration.py
