[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-math-wars"
version = "0.0.1"

[tool.pytest.ini_options]
addopts = [
    "--cov=backend",
    "--cov-config=pyproject.toml",
]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/test_*.py",
] 