[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-math-wars"
version = "0.0.1"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
addopts = [
    "--cov=./",
    "--cov-config=pyproject.toml",
]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.poetry.dependencies]
python = "^3.11" # Assuming Python 3.11+, adjust if needed
fastapi = "*"
sqlmodel = "^0.0.19"
pymysql = "^1.1.1"
uvicorn = {extras = ["standard"], version = "*"}
python-dotenv = "^1.0.0"
cryptography = "*"
httpx = "^0.28.1"
